[package]
name = "parsing-scratch"
version = "0.1.0"
authors = ["Nat Knight <nathaniel.ep@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
serde-xml-rs = "0.3.1"
